--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
   padding: 0;
-  background: #f9f9f9d2;
-  transition: background 0.3s, color 0.3s;
+  background-color: #f9f9f9d2;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 body.dark {
